@startuml
namespace factory_a {
    class FactoryA << (S,Aquamarine) >> {
        + NewObject() main.ObjectType
        + GetDataType0() main.DataType0
        + SetDataType1(comp main.DataType1) 

    }
}

"main.Factory" <|.. "factory_a.FactoryA"

namespace factory_b {
    class FactoryB << (S,Aquamarine) >> {
        + NewObject() main.ObjectType
        + GetDataType0() main.DataType0
        + SetDataType1(comp main.DataType1) 

    }
}

"main.Factory" <|.. "factory_b.FactoryB"

namespace main {
    interface Factory  {
        + NewObject() main.ObjectType
        + GetDataType0() main.DataType0
        + SetDataType1(comp main.DataType1) 

    }
}
@enduml
